LPS-69907 build-lang

--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ar.properties
@@ -6,6 +6,7 @@ any-website=أضف موقع إلكتروني
 canvas-page-url=رابط لوحة صفحة
 copy-the-callback-url-and-specify-it-in-facebook=انسخ رابط رد الاتصال وحددها في فيسبوك.
 get-the-api-key-and-canvas-page-url-from-facebook=الحصول على الـ(API) ورابط لوحة الصفحة من الفيسبوك.
+guest-permissions-inherited=استناداً إلى التكوين الحالي جميع مستخدمي دور الضيف وتلقائياً ترث الأذونات التي تنتمي إلى دور الضيافة. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=إعدادات البورتلت
 opensocial-gadget=أداة OpenSocial
 please-enter-a-valid-setup-name=الرجاء إدخال إسم الصنف صحيح.
