--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_cs.properties
@@ -6,6 +6,7 @@ any-website=Jakékoliv stránky
 canvas-page-url=URL stránky s plátnem (canvas page)
 copy-the-callback-url-and-specify-it-in-facebook=Zkopírovat URL pro zpětné vyvolání a specifikovat je na Facebooku.
 get-the-api-key-and-canvas-page-url-from-facebook=Získat klíč k API a URL stránky z Facebooku.
+guest-permissions-inherited=Podle aktuální konfigurace všichni uživatelé mají role hosta a automaticky dědí oprávnění, které patří do role hosta. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Konfigurace portletu
 opensocial-gadget=OpenSocial Gadget
 please-enter-a-valid-setup-name=Zadejte prosím platný název nastavení portletu.
