--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_el.properties
@@ -6,6 +6,7 @@ any-website=Οποιοδήποτε website
 canvas-page-url=URL σελίδας καμβά
 copy-the-callback-url-and-specify-it-in-facebook=Αντιγραφή του URL επιστροφής (callback) για ορισμό στο Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Λήψη κλειδιού API και τη σελίδα καμβά από το Facebook.
+guest-permissions-inherited=Σύμφωνα με την τρέχουσα ρύθμιση παραμέτρων όλοι οι χρήστες έχουν το ρόλο φιλοξενουμένων και κληρονομούν αυτόματα δικαιώματα που ανήκουν σε το ρόλο φιλοξενουμένων. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Διαχείριση portlet
 opensocial-gadget=OpenSocial Gadget
 please-enter-a-valid-setup-name=Παρακαλώ δώστε ένα έγκυρο όνομα ρύθμισης.
