--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_fa.properties
@@ -6,6 +6,7 @@ any-website=اضافه کردن وب سایت
 canvas-page-url=آدرس صفحه
 copy-the-callback-url-and-specify-it-in-facebook=کپی آدرس پیگیری و مشخص کردن در فیس بوک
 get-the-api-key-and-canvas-page-url-from-facebook=کلید API و URL صفحه را از فیسبوک دریافت کن.
+guest-permissions-inherited=با توجه به تنظیمات فعلی همه کاربران نقش مهمان دارند و به طور خودکار مجوز است که متعلق به نقش مهمان به ارث می برند. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=تنظیمات پورتلت
 opensocial-gadget=جست‌و‌جو
 please-enter-a-valid-setup-name=لطفا یک نام محصول مجاز وارد کنید.
