--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_fi.properties
@@ -6,6 +6,7 @@ any-website=Mikä tahansa websivusto
 canvas-page-url=Canvas sivun URL
 copy-the-callback-url-and-specify-it-in-facebook=Kopioi callback URL ja määritä se Facebookissa.
 get-the-api-key-and-canvas-page-url-from-facebook=Hanki API-avain ja canvas sivun URL Facebookista.
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portletin asetukset
 opensocial-gadget=OpenSocial Gadget
 please-enter-a-valid-setup-name=Syötä kelvollinen asetus nimi.
