--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_hr.properties
@@ -6,6 +6,7 @@ any-website=Svaka Web stranica
 canvas-page-url=Canvas URL stranice
 copy-the-callback-url-and-specify-it-in-facebook=Kopiraj povratni URL i definiraj ga u Facebook-u.
 get-the-api-key-and-canvas-page-url-from-facebook=Nabavite API ključ i platnu URL-a stranice sa Facebooka.
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Konfiguracija portleta
 opensocial-gadget=OpenSocial gadget
 please-enter-a-valid-setup-name=Molimo, unesite ispravan naziv postava.
