--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_hu.properties
@@ -6,6 +6,7 @@ any-website=Bármelyik webhely
 canvas-page-url=Vászon URL címe
 copy-the-callback-url-and-specify-it-in-facebook=Visszahivatkozott URL másolása és megadása a Facebookban.
 get-the-api-key-and-canvas-page-url-from-facebook=API kulcs és canvas page URL kérése a Facebookból.
+guest-permissions-inherited=A jelenlegi beállításai szerint minden felhasználó van a vendég szerep, és automatikusan öröklik az engedélyeket, hogy a vendég szerep tartozik. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portlet konfiguráció
 opensocial-gadget=OpenSocial kütyü
 please-enter-a-valid-setup-name=Adj meg egy érvényes telepítési nevet.
