--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_it.properties
@@ -6,6 +6,7 @@ any-website=Qualsiasi Sito Web
 canvas-page-url=URL della Pagina Canvas
 copy-the-callback-url-and-specify-it-in-facebook=Copia l'URL della callback e specificalo in Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Recupera la chiave API e l'URL della pagina canvas da facebook.
+guest-permissions-inherited=Secondo la configurazione corrente tutti gli utenti hanno il ruolo di ospite ed ereditano automaticamente le autorizzazioni che appartengono al ruolo di ospite. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Configurazione Portlet
 opensocial-gadget=Gadget OpenSocial
 please-enter-a-valid-setup-name=Inserisci un nome della configurazione valido.
