--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_iw.properties
@@ -6,6 +6,7 @@ any-website=אתר כלשהו
 canvas-page-url=כתובת אינטרנט של דף קנבס
 copy-the-callback-url-and-specify-it-in-facebook=העתק כתובת אינטרנט התקשרות חזרה וציין זאת בפייסבוק
 get-the-api-key-and-canvas-page-url-from-facebook=השג מפתח API וכתובת עמוד קאנבאס מפייסבוק
+guest-permissions-inherited=על פי התצורה הנוכחית לכל המשתמשים יש את התפקיד חוות ואת יורשים הרשאות השייכים לתפקיד חוות באופן אוטומטי. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=הגדרת הפורטלט
 opensocial-gadget=חפיץ (גאדג'ט) OpenSocial
 please-enter-a-valid-setup-name=אנא הכנס שם התקנה תקף
