--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_zh_CN.properties
@@ -6,6 +6,7 @@ any-website=任何网站
 canvas-page-url=Canvas页面URL
 copy-the-callback-url-and-specify-it-in-facebook=复制回调URL并且在Facebook中对其进行指定。
 get-the-api-key-and-canvas-page-url-from-facebook=从Facebook获取API key和canvas页面URL。
+guest-permissions-inherited=根据当前配置的所有用户有访客角色和自动继承属于访客角色的权限。 (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portlet配置
 opensocial-gadget=OpenSocial工具
 please-enter-a-valid-setup-name=请输入有效的配置名称。
