--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_bg.properties
@@ -6,6 +6,7 @@ any-website=Която и да е интернет страница
 canvas-page-url=Canvas Page URL (Automatic Copy)
 copy-the-callback-url-and-specify-it-in-facebook=Копиране на обратен URL и задаване във Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Вземи API ключ и URL на страница от Facebook.
+guest-permissions-inherited=Според текущата конфигурация всички потребители имат роля на гости и автоматично наследяват разрешения, които принадлежат към ролята на гости. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Конфигуриране на портлета
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Моля, въведете валидно име за настройка.
