--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ca.properties
@@ -6,6 +6,7 @@ any-website=Qualsevol lloc web
 canvas-page-url=L'URL de la pàgina de treball
 copy-the-callback-url-and-specify-it-in-facebook=Copieu l'URL de retorn i especifiqueu-la en Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Obtingues la clau de l'API i l'URL de la pàgina treball de Facebook.
+guest-permissions-inherited=Segons la configuració actual tots els usuaris tenen la funció d'aquests i automàticament hereta els permisos que pertanyen a la funció d'aquests. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Configuració de portlets
 opensocial-gadget=Giny d'OpenSocial
 please-enter-a-valid-setup-name=Introduïu un nom per a la configuració que sigui vàlid.
