--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_da.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_da.properties
@@ -6,6 +6,7 @@ any-website=Tilføj Website
 canvas-page-url=Canvas side URL
 copy-the-callback-url-and-specify-it-in-facebook=Copy the callback URL and specify it in Facebook. (Automatic Copy)
 get-the-api-key-and-canvas-page-url-from-facebook=Get the API key and canvas page URL from Facebook. (Automatic Copy)
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portletkonfiguration
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Please enter a valid XML url.
