--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_de.properties
@@ -6,6 +6,7 @@ any-website=Beliebige Site
 canvas-page-url=Canvas URL
 copy-the-callback-url-and-specify-it-in-facebook=Kopieren Sie die Callback-URL und geben Sie diese in Facebook an.
 get-the-api-key-and-canvas-page-url-from-facebook=Einen API-Schlüssel- und eine Canvas URL von Facebook beziehen.
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portletkonfiguration
 opensocial-gadget=OpenSocial Gadget
 please-enter-a-valid-setup-name=Bitte geben Sie bitte einen gültigen Setupnamen an.
