--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_et.properties
@@ -6,6 +6,7 @@ any-website=Ükskõik milline veebileht
 canvas-page-url=Canvas Page URL (Automatic Copy)
 copy-the-callback-url-and-specify-it-in-facebook=Kopeeri callback URL ja märgi see Facebook'is.
 get-the-api-key-and-canvas-page-url-from-facebook=Get the API key and canvas page URL from Facebook. (Automatic Copy)
+guest-permissions-inherited=Vastavalt konfiguratsioonile kõik kasutajad on Külastajate roll ja automaatselt päri õigused, mis kuuluvad roll Külaline. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portleti seadistamine
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Sisesta korrektne seadistuse nimi.
