--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_eu.properties
@@ -6,6 +6,7 @@ any-website=Edozein webgune
 canvas-page-url=Canvas orriaren URLa
 copy-the-callback-url-and-specify-it-in-facebook=Kopiatu URL atzeradeia eta Facebook-ean zehaztu.
 get-the-api-key-and-canvas-page-url-from-facebook=Lortu Facebook-etik API gakoa eta canvas-orriaren URL-a.
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portlet konfigurazioa
 opensocial-gadget=OpenSocial Gadgeta
 please-enter-a-valid-setup-name=Mesedez, sartu baliozko konfigurazio izen bat.
