--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_fr.properties
@@ -6,6 +6,7 @@ any-website=Tout site Web
 canvas-page-url=URL de page de toile
 copy-the-callback-url-and-specify-it-in-facebook=Copiez l'URL de rappel de service et spécifiez-le dans Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Obtenez la clé d'API et l'URL de page de canvas depuis Facebook.
+guest-permissions-inherited=Selon la configuration actuelle, tous les utilisateurs ont le rôle d’invité et héritent automatiquement des autorisations qui appartiennent au rôle Guest. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Configuration de l'application
 opensocial-gadget=Gadget OpenSocial
 please-enter-a-valid-setup-name=Veuillez écrire un nom valide d'installation.
