--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_gl.properties
@@ -6,6 +6,7 @@ any-website=Calquera sitio web
 canvas-page-url=URL da páxina de canvas
 copy-the-callback-url-and-specify-it-in-facebook=Copiar a URL de callback e introducir no formulario de facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Consegue a API key e a URL da páxina de canvas do facebook.
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Configuración de portlets
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Por favor, introduce un nome válido para a configuración.
