--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_in.properties
@@ -6,6 +6,7 @@ any-website=Setiap Situs
 canvas-page-url=Halaman kanvas URL
 copy-the-callback-url-and-specify-it-in-facebook=Salin URL panggil balik dan menetapkannya dalam Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Dapatkan API key dan kanvas URL halaman dari Facebook.
+guest-permissions-inherited=Menurut konfigurasi saat ini semua pengguna memiliki peran tamu dan secara otomatis mewarisi izin yang milik peran tamu. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Konfigurasi Portlet
 opensocial-gadget=OpenSocial Gadget
 please-enter-a-valid-setup-name=Silakan masukkan nama Setup yang berlaku
