--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ja.properties
@@ -6,6 +6,7 @@ any-website=全てのWebサイト
 canvas-page-url=キャンバスページ URL
 copy-the-callback-url-and-specify-it-in-facebook=コールバック URL をコピーし、Facebook に指定してください。
 get-the-api-key-and-canvas-page-url-from-facebook=FacebookからAPIキーおよびキャンバスページURLを取得します。
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=ポートレット設定
 opensocial-gadget=OpenSocial ガジェット
 please-enter-a-valid-setup-name=有効なセットアップ名を入力してください。
