--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_lo.properties
@@ -6,6 +6,7 @@ any-website=ທຸກເວບໄຊທ໌
 canvas-page-url=ໜ້າຂອງ URL
 copy-the-callback-url-and-specify-it-in-facebook=ກ໋ອບປີການເອີ້ນຄືນ URL ແລະກຳນົດລົງໃນ ເຟດບູກ
 get-the-api-key-and-canvas-page-url-from-facebook=ຮັບລະຫັດ ເອພີໄອ ແລະ ນ້າແຄນວອດ URL ຈາກ facebook
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=ການກຳນົດຄ່າຂອງພ໋ອກເລັດ
 opensocial-gadget=ເປີດແບ໋ດເກັດສາທາລະນະ
 please-enter-a-valid-setup-name=ກະລຸນາປ້ອນຊື່ການຕິດຕັ້ງທີ່ເໝາະສົມ
