--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_lt.properties
@@ -6,6 +6,7 @@ any-website=Any Website (Automatic Copy)
 canvas-page-url=Canvas Page URL (Automatic Copy)
 copy-the-callback-url-and-specify-it-in-facebook=Copy the callback URL and specify it in Facebook. (Automatic Copy)
 get-the-api-key-and-canvas-page-url-from-facebook=Get the API key and canvas page URL from Facebook. (Automatic Copy)
+guest-permissions-inherited=Pagal dabartinę konfigūraciją visiems vartotojams turėti svečių vaidmens ir automatiškai Paveldėti teises, kurie priklauso Svečių vaidmens. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portlet Configuration (Automatic Copy)
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Please enter a valid setup name. (Automatic Copy)
