--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_nb.properties
@@ -6,6 +6,7 @@ any-website=Valgfri nettsted
 canvas-page-url=Canvas sideadresse
 copy-the-callback-url-and-specify-it-in-facebook=Kopier callback URL-en og angi den i Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Hent API-nøkkelen og lerred-side-URL-en fra Facebook.
+guest-permissions-inherited=Ifølge gjeldende konfigurasjon alle brukere ha Gjesterollen og arver automatisk tillatelser som tilhører rollen. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portletinnstillinger
 opensocial-gadget=OpenSocial dings
 please-enter-a-valid-setup-name=Vennligst angi et gyldig oppsettsnavn.
