--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_nl_BE.properties
@@ -6,6 +6,7 @@ any-website=Elke website
 canvas-page-url=De URL van de canvaspagina
 copy-the-callback-url-and-specify-it-in-facebook=Callback URL kopiëren en ingeven op Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=De API-sleutel en de canvaspagina URL van Facebook bemachtigen.
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portletconfiguratie
 opensocial-gadget=OpenSocial gadget
 please-enter-a-valid-setup-name=Voer een geldige naam in.
