--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_pl.properties
@@ -6,6 +6,7 @@ any-website=Dowolny serwis Web
 canvas-page-url=URL strony wzorcowej
 copy-the-callback-url-and-specify-it-in-facebook=Skopiuj URL wywołania zwrotnego i podaj go w Facebooku.
 get-the-api-key-and-canvas-page-url-from-facebook=Pobierz klucz API oraz URL strony wzorcowej z Facebook'a.
+guest-permissions-inherited=Zgodnie z bieżącą konfiguracja wszystkich użytkowników mają roli Gości i automatycznie dziedziczą uprawnienia, które należą do roli Gości. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Konfiguracja portletu
 opensocial-gadget=Gadżet OpenSocial
 please-enter-a-valid-setup-name=Wprowadź prawidłową nazwę konfiguracji.
