--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_pt_PT.properties
@@ -6,6 +6,7 @@ any-website=Qualquer Website
 canvas-page-url=URL da Página da Tela
 copy-the-callback-url-and-specify-it-in-facebook=Copiar o URL de callback e especifique-o no Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Obter a chave da API e URL da página do Facebook.
+guest-permissions-inherited=De acordo com a configuração atual, todos os usuários têm a função de comentários e herdam automaticamente as permissões que pertencem à função de comentários. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Configuração de Portlets
 opensocial-gadget=Dispositivo OpenSocial
 please-enter-a-valid-setup-name=Por favor, indique um nome de configuração válido.
