--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ro.properties
@@ -6,6 +6,7 @@ any-website=Orice Site Web
 canvas-page-url=Canvas Page URL (Automatic Copy)
 copy-the-callback-url-and-specify-it-in-facebook=Copiază URL-ul de callback și specifică acestea în Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Get the API key and canvas page URL from Facebook. Ia cheie API și pagină canvas URL de pe facebook.
+guest-permissions-inherited=În funcţie de configuraţia curentă toţi utilizatorii au rolul de comentarii şi automat moştenesc permisiunile care aparţin rol secundar. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Configurare module
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Te rog introdu un nume de instalare valid.
