--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_ru.properties
@@ -6,6 +6,7 @@ any-website=Любой веб-сайт
 canvas-page-url=URL страницы Canvas
 copy-the-callback-url-and-specify-it-in-facebook=Скопировать ссылку (URL) и указать ее на Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Получить ключ API и URL страницы обрамления с Facebook.
+guest-permissions-inherited=Согласно текущей конфигурации все пользователи имеют роль гостя и автоматически наследуют разрешения, которые принадлежат к роли гостя. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Настройка портлета
 opensocial-gadget=OpenSocial гаджет
 please-enter-a-valid-setup-name=Пожалуйста, введите имя настройки.
