--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_sk.properties
@@ -6,6 +6,7 @@ any-website=Akékoľvek webové sídlo
 canvas-page-url=URL stránky s plátnom (canvas page)
 copy-the-callback-url-and-specify-it-in-facebook=Skopírujte callback URL a nastavte ju v službe Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Získajte kľúč API a canvas page URL zo služby Facebook.
+guest-permissions-inherited=Podľa aktuálnej konfigurácie všetkých užívateľov mať rolu Hodnotenie a automaticky dedia povolenia, ktoré patria k úlohe hodnotenie. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Konfigurácia portletu
 opensocial-gadget=OpenSocial Gadget
 please-enter-a-valid-setup-name=Zadajte, prosím, platné meno nastavenia.
