--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_sl.properties
@@ -6,6 +6,7 @@ any-website=Katera koli spletna stran
 canvas-page-url=Canvas Page URL (Automatic Copy)
 copy-the-callback-url-and-specify-it-in-facebook=Kopiraj povratni URL in opiši na Facebooku.
 get-the-api-key-and-canvas-page-url-from-facebook=Pridobi API ključ in naslov okvirja strani s Facebooka.
+guest-permissions-inherited=Trenutne nastavitve vseh uporabnikov vlogo tudi Ocene in samodejno podedujejo dovoljenja, ki pripadajo Ocene vlogo. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Konfiguracija portletov
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Vnesite pravilno ime namestitve.
