--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_sr_RS.properties
@@ -6,6 +6,7 @@ any-website=Било који Веб сајт
 canvas-page-url=Канвас Странице УРЛ
 copy-the-callback-url-and-specify-it-in-facebook=Копирај УРЛ адресу за повратни позив и наведите га на Фејсбуку.
 get-the-api-key-and-canvas-page-url-from-facebook=Набави АПИ кључ и канвас УРЛ странице са Facebook-а.
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Портлет Конфигурација
 opensocial-gadget=OpenSocial Уређај
 please-enter-a-valid-setup-name=Молимо Вас да унесете важеће име за подешавање.
