--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_sv.properties
@@ -6,6 +6,7 @@ any-website=Webbplatser
 canvas-page-url=Kanvas sid-URL
 copy-the-callback-url-and-specify-it-in-facebook=Kopiera återanrops-URL och specificera den i Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Hämta API-nyckeln och Canvas Page URL från Facebook.
+guest-permissions-inherited=According to the current configuration all users have the Guest role and automatically inherit permissions that belong to the Guest role. (Automatic Copy)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portletinställningar
 opensocial-gadget=OpenSocial Gadget
 please-enter-a-valid-setup-name=Var vänlig och skriv in ett giltigt inställningsnamn
