--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_tr.properties
@@ -6,6 +6,7 @@ any-website=Herhangi bir web sitesi
 canvas-page-url=Taslak Sayfa Adresi
 copy-the-callback-url-and-specify-it-in-facebook=Geri çağrılan URL'i kopyala ve Facebook'un içinde belirt.
 get-the-api-key-and-canvas-page-url-from-facebook=Facebook'tan API anahtarını ve taslak sayfası URL'sini al.
+guest-permissions-inherited=Şu anki yapılandırmasına göre tüm kullanıcıların konuk rolü ve otomatik olarak konuk role ait izinleri devralır. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Portlet Ayarları
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Lütfen geçerli bir kurulum adı giriniz.
