--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_uk.properties
@@ -6,6 +6,7 @@ any-website=Будь-який веб-сайт
 canvas-page-url=Canvas Page URL (Automatic Copy)
 copy-the-callback-url-and-specify-it-in-facebook=Скопіювати посилання та розмістити її на Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Отримати ключ API та URL сторінки до Facebook.
+guest-permissions-inherited=Відповідно до поточної конфігурації всі користувачі мають гість роль і автоматично успадковують дозволи, які належать до гість роль. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Налаштування портлету
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Будь ласка введіть назву налаштування.
