--- a/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/web-experience/portlet-configuration/portlet-configuration-web/src/main/resources/content/Language_vi.properties
@@ -6,6 +6,7 @@ any-website=Tất cả Website
 canvas-page-url=Canvas Trang URL
 copy-the-callback-url-and-specify-it-in-facebook=Copy the callback URL and specify it trong Facebook.
 get-the-api-key-and-canvas-page-url-from-facebook=Lấy khóa API và URL trang trình bày từ Facebook.
+guest-permissions-inherited=Theo cấu hình hiện tại, tất cả người dùng có vai trò đánh và tự động kế thừa các quyền thuộc về vai trò đánh. (Automatic Translation)
 javax.portlet.title.com_liferay_portlet_configuration_web_portlet_PortletConfigurationPortlet=Cấu hình ứng dụng
 opensocial-gadget=OpenSocial Gadget (Automatic Copy)
 please-enter-a-valid-setup-name=Vui lòng nhập tên thiết lập hợp lệ.
